# conan-vtk

./: .gitignore  .travis.yml  CMakeLists.txt  FindVTK.cmake  Jenkinsfile  appveyor.yml  azure-pipelines.yml  build.py  conanfile.py
.travis/: install.sh  run.sh
test/: CMakeLists.txt  conanfile.py  main.cpp
test_package/: CMakeLists.txt  conanfile.py
